Fixed overflow issue with jumbotron circles

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,9 @@
+#home{
+    overflow-x: clip;
+}
+
 #home header h1{
-    font-size: calc(1.625rem + 7vw);
+    font-size: calc(1.625rem + 8vw);
     z-index: 10;
     position: relative;
     margin-top: 15vh;
@@ -7,6 +11,7 @@
 }
 
 #home header h2{
+    font-size: calc(1.625rem + 2vw);
     position: relative;
     z-index: 10;
     text-shadow: 3px 2px var(--white);
@@ -286,6 +291,9 @@
 }
 
 @media (max-width: 768px){
+    .circles{
+        height: 80vh;
+    }
 
     #projects .hello-kooky{
         margin: 20px 5vw;
